# gppmono

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  floofy-leaping-island.md  justfile
.claude/: settings.json
docker/caddy/: Caddyfile
docker/fixtures/: local-dev-users.json  woo-publications.json
docker/frontend/: Dockerfile
docker/gpp-app-combined/: Dockerfile
docker/nginx/: default.conf
docker/postgres/init/: 01-init-databases.sql  02-extensions.sh
docs/: architecture-comparison.md
services/gpp-api/: Dockerfile  README.md  alembic.ini  justfile  pyproject.toml
services/gpp-api/alembic/: env.py
services/gpp-api/alembic/versions/: 001_initial_schema.py
services/gpp-api/src/gpp_api/: __init__.py  config.py  main.py
services/gpp-api/src/gpp_api/admin/: __init__.py
services/gpp-api/src/gpp_api/api/: __init__.py  deps.py
services/gpp-api/src/gpp_api/api/routers/: __init__.py  categories.py  documents.py  health.py  organisations.py  publications.py  topics.py
services/gpp-api/src/gpp_api/db/: __init__.py  engine.py
services/gpp-api/src/gpp_api/db/models/: __init__.py  accounts.py  base.py  metadata.py  publication.py
services/gpp-api/src/gpp_api/schemas/: __init__.py
services/gpp-api/src/gpp_api/services/: __init__.py  openzaak.py  redis.py  state_machine.py
services/gpp-api/src/gpp_api/utils/: __init__.py  audit.py  logging.py
services/gpp-api/src/gpp_api/workers/: __init__.py  __main__.py  queue.py  tasks.py  worker.py
services/gpp-api/tests/: __init__.py  conftest.py
services/gpp-api/tests/integration/: __init__.py
services/gpp-api/tests/unit/: __init__.py  test_documents.py  test_health.py  test_openzaak.py  test_publications.py  test_state_machine.py
services/gpp-app/: FIXES.md  IMPLEMENTATION_SUMMARY.md  METADATA_GENERATION.md  Makefile  README.md  SECURITY_REVIEW.md  docker-compose.override.yml  docker-compose.yml  justfile
services/gpp-app-fastapi/: Dockerfile  README.md  alembic.ini  justfile  pyproject.toml
services/gpp-app-fastapi/alembic/: env.py  script.py.mako
services/gpp-app-fastapi/alembic/versions/: 001_initial_schema.py
services/gpp-app-fastapi/fixtures/: 001_seed_data.sql
services/gpp-app-fastapi/src/gpp_app/: __init__.py  config.py  main.py
services/gpp-app-fastapi/src/gpp_app/api/: __init__.py  auth.py  documents.py  formats.py  health.py  metadata.py  publications.py  user_groups.py
services/gpp-app-fastapi/src/gpp_app/auth/: __init__.py  oidc.py  permissions.py
services/gpp-app-fastapi/src/gpp_app/db/: __init__.py  engine.py
services/gpp-app-fastapi/src/gpp_app/db/models/: __init__.py  base.py  user_groups.py
services/gpp-app-fastapi/src/gpp_app/schemas/: __init__.py
services/gpp-app-fastapi/src/gpp_app/services/: __init__.py  gpp_api_client.py
services/gpp-app-fastapi/src/gpp_app/utils/: __init__.py  logging.py
services/gpp-app-fastapi/tests/: __init__.py  conftest.py
services/gpp-app-fastapi/tests/integration/: __init__.py
services/gpp-app-fastapi/tests/unit/: __init__.py  test_auth.py  test_gpp_api_client.py  test_health.py  test_metadata.py  test_user_groups.py
services/gpp-app/.github/workflows/: docker-image.yml
services/gpp-app/ODPC.Server/: ODPC.csproj  Program.cs  appsettings.json
services/gpp-app/ODPC.Server/Authentication/: AuthenticationExtensions.cs  DevAutoLoginMiddleware.cs
services/gpp-app/ODPC.Server/Config/: JsonSerialization.cs
services/gpp-app/ODPC.Server/Data/: Extensions.cs  OdpcDbContext.cs
services/gpp-app/ODPC.Server/Features/: GebruikerWaardelijstItemsService.cs
services/gpp-app/ODPC.Server/Migrations/: 20250528112843_AddGebruikersgroepPublicatie.Designer.cs  20250528112843_AddGebruikersgroepPublicatie.cs  20260107144120_AddUniqueConstraintToGebruikersgroepenTable.Designer.cs  20260107144120_AddUniqueConstraintToGebruikersgroepenTable.cs  OdpcDbContextModelSnapshot.cs
services/gpp-app/ODPC.Server/Properties/: launchSettings.json
services/gpp-app/ODPC.Test/: GebruikersgroepBijwerkenTest.cs  GebruikersgroepDetailsTest.cs  GebruikersgroepVerwijderenTest.cs  GebruikersgroepenOverzichtTest.cs  MetadataGenerateControllerTest.cs  ODPC.Test.csproj
services/gpp-app/ODPC.Test/Infrastructure/: InMemoryDatabase.cs
services/gpp-app/docker/nginx/: nginx.conf
services/gpp-app/docker/odrc/: celery-entrypoint.sh  entrypoint.sh
services/gpp-app/docs/: conf.py  index.rst  requirements.txt
services/gpp-app/docs/Introductie/: index.rst  team.md
services/gpp-app/docs/handleiding/: index.rst
services/gpp-app/docs/installation/: index.rst
services/gpp-app/odpc.client/: .dockerignore  .gitignore  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
services/gpp-app/odpc.client/src/: App.vue  config.ts  (+1 more)
services/publicatiebank/: .git-blame-ignore-revs  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  INSTALL.rst  README.EN.rst  README.rst  codecov.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.config.js
services/publicatiebank/docker/: docker-compose.mock.yml
services/publicatiebank/docs/: conf.py  index.rst  versions.rst
services/publicatiebank/requirements/: base.in  base.txt  ci.txt  dev.txt  test-tools.in  type-checking.in  type-checking.txt
services/woo-hoo/: justfile
(+390 files in other folders)
