[project]
name = "gpp-api"
version = "0.1.0"
description = "FastAPI backend for GPP - replaces publicatiebank Django service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "EUPL-1.2" }
authors = [{ name = "ICATT", email = "info@icatt.nl" }, { name = "INFONL", email = "info@info.nl" }]
keywords = ["gpp", "woo", "publications", "fastapi", "dutch-government"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    "transitions>=0.9.0",
    "starlette-admin>=0.14.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.18",
    "typer>=0.15.0",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "pyrefly>=0.15.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
gpp-api = "gpp_api.cli:app"

[project.urls]
Homepage = "https://github.com/GPP-Woo/GPP-publicatiebank"
Repository = "https://github.com/GPP-Woo/GPP-publicatiebank"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpp_api"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["gpp_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/gpp_api"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
